inclusão de dados e banco layout

--- a/Cozastore/Views/Categorias/Create.cshtml
+++ b/Cozastore/Views/Categorias/Create.cshtml
@@ -1,6 +1,7 @@
 @model Cozastore.Models.Categoria
 @{
-    ViewData["Title"] = "Catregoria";
+    ViewData["Title"] = "Categorias";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Categoria</h1>
@@ -10,7 +11,7 @@
     <div class="col-md-4 mx-auto">
         <form asp-action="Create" method="POST" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group mb-3 ">
+            <div class="form-group mb-3">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
@@ -26,15 +27,15 @@
                 </label>
             </div>
             <div class="form-group mb-3">
-                <label asp-for="CategoriaMaeId" class="Form-label"></label>
+                <label asp-for="CategoriaMaeId" class="form-label"></label>
                 <select asp-for="CategoriaMaeId" class ="form-select" asp-items="ViewBag.CategoriaMaeId">
                     <option value="">Selecione uma Categoria Mãe</option>
                 </select>
             </div>
-             <div class="form-group mb-3">
+            <div class="form-group mb-3">
                 <label asp-for="Foto" class="control-label"></label>
-                <img id="Preview" class="img-fluid w-100" /> 
-                <input type="file" asp-for="Foto" class="form-control" accept=".jpg, .jpeg, .png, .gif, .jfif" />
+                <img id="Preview" class="img-fluid w-100" />
+                <input type="file" asp-for="Foto" class="form-control" accept=".jpg,.jpeg,.png,.gif,.jfif" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
@@ -52,11 +53,13 @@
         window.addEventListener('load', function() {
             document.querySelector('input[type=file]')
             .addEventListener('change', function() {
-                if (this.files && this.files[0]){
+                if (this.files && this.files[0]) {
                     var img = document.getElementById('Preview');
                     img.src = URL.createObjectURL(this.files[0]);
                 }
             });
         });
+
     </script>
 }
+
